fix bouton header collection mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -16568,6 +16568,14 @@ body.template-page .main-content > .page-width {
   .section-header--flush .section-header__title {
     margin-top: 15% !important;
   }
+
+  .collection-hero .section-header--flush .section-header__title {
+    margin-block: 0 16px !important;
+  }
+
+  .collection-hero .section-header--flush .slider-action {
+    text-align: center;
+  }
 }
 
 @media only screen and (max-width: 480px) {
